--- a/Day 2/util.css
+++ b/Day 2/util.css
@@ -36,11 +36,13 @@
 .pt-2 { padding-top: 1rem; }
 .pt-3 { padding-top: 1.5rem; }
 .pt-4 { padding-top: 2rem; }
+.pt-5 { padding-top: 3rem; }
 
 .pb-1 { padding-bottom: 0.5rem; }
 .pb-2 { padding-bottom: 1rem; }
 .pb-3 { padding-bottom: 1.5rem; }
 .pb-4 { padding-bottom: 2rem; }
+.pb-5 { padding-bottom: 3rem; }
 
 .pl-1 { padding-left: 0.5rem; }
 .pl-2 { padding-left: 1rem; }
