--- a/Day 2/reset.css
+++ b/Day 2/reset.css
@@ -5,16 +5,15 @@
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     color: #2c3e50;
-}
-
-img {
-    display: block;
-    width: 100%;
 }
 
 a {
     text-decoration: none;
-    color: #2c3e50;
+}
+
+img {
+    width: 100%;
+    display: block;
 }
