--- a/Final/css/reset.css
+++ b/Final/css/reset.css
@@ -5,23 +5,15 @@
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', Helvetica, Arial, sans-serif;
     color: #2c3e50;
-    font-size: 16px;
-}
-
-@media only screen and (max-width: 576px) {
-  html {
-    font-size: 14px;
-  }
-}
-
-img {
-    display: block;
-    width: 100%;
 }
 
 a {
     text-decoration: none;
-    color: #2c3e50;
+}
+
+img {
+    width: 100%;
+    display: block;
 }
