--- a/Final/css/style.css
+++ b/Final/css/style.css
@@ -1,131 +1,35 @@
-/* Navbar */
-
-nav {
-  box-shadow: 0px 0px 10px -3px rgba(87,87,87,0.7);
-  font-size: 1.1rem;
-}
-
-nav ul {
-  display: flex;
-  list-style: none;
-}
-
-nav p {
-  font-size: 1.2rem;
-  font-weight: 700;
-}
-
-nav li {
-  margin-right: 2rem;
-}
-
-nav li:last-child {
-  margin-right: 0rem;
-}
-
-.logo-img {
-  width: 40px;
-}
-
-.bar {
-  height: 2px;
-  background: #2c3e50;
-  width: 25px;
-  margin-bottom: 6px;
-}
-
-.menu { display: none; }
-
-.phone-btn { display: none; }
-
-@media only screen and (max-width: 576px) {
-  .menu { display: block; }
-
-  .phone-btn {
-      display: inline-block;
-      padding: 0.5rem 1rem;
-      border: 2px solid #2c3e50;
-      color: #2c3e50;
-  }
-
-  nav ul {
-      display: none;
-      flex-direction: column;
-      width: 100%;
-  }
-
-  nav li {
-      margin-right: 0;
-      margin-bottom: 1rem;
-  }
-
-  nav li:last-child {
-      margin-bottom: 0rem;
-  }
-}
-
 /* Header */
-
 header {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("https://images.pexels.com/photos/69432/pexels-photo-69432.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260") no-repeat center/cover;
-  height: 600px;
-  position: relative;
-  color: #fff;
+    height: 450px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.pexels.com/photos/265667/pexels-photo-265667.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') no-repeat center/cover;
+    color: #fff;
+    position: relative;
+
 }
 
 .text-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /* About */
-
 .about p {
     line-height: 1.5;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
+    font-weight: 300;
 }
 
-/* Profile */
+
+
+/* Cards */
 .card {
-  box-shadow: 0px 0px 20px 0px rgba(171,171,171,1);
+    box-shadow: 0px 6px 15px 0px rgba(153, 153, 153, 1);
 }
 
 .card-content {
-  padding: 10px;
+    padding: 15px;
 }
 
-/* Footer */
 
-footer {
-  background-color: #16a085;
-  color: #fff;
-}
-
-footer h3 {
-  border-bottom: 2px solid #2ecc71;
-  padding-bottom: 0.5rem;
-}
-
-footer p {
-  line-height: 1.5;
-}
-
-footer ul {
-  list-style: none;
-}
-
-footer li {
-  margin-bottom: 0.5rem;
-}
-
-footer a {
-  color: #fff;
-}
-
-.copyright {
-  background-color: #127964;
-  color: #fff;
-  font-size: 0.8rem;
-}
