--- a/Final/css/util.css
+++ b/Final/css/util.css
@@ -1,9 +1,4 @@
-/*
-1. each css / one rule
-*/
-
 /* Margin */
-
 .mt-1 { margin-top: 0.5rem; }
 .mt-2 { margin-top: 1rem; }
 .mt-3 { margin-top: 1.5rem; }
@@ -14,21 +9,20 @@
 .mb-3 { margin-bottom: 1.5rem; }
 .mb-4 { margin-bottom: 2rem; }
 
-.ml-1 { margin-left: 0.5rem; }
-.ml-2 { margin-left: 1rem; }
-.ml-3 { margin-left: 1.5rem; }
-.ml-4 { margin-left: 2rem; }
-
 .mr-1 { margin-right: 0.5rem; }
 .mr-2 { margin-right: 1rem; }
 .mr-3 { margin-right: 1.5rem; }
 .mr-4 { margin-right: 2rem; }
 
-.mr-auto { margin-right: auto; }
+.ml-1 { margin-left: 0.5rem; }
+.ml-2 { margin-left: 1rem; }
+.ml-3 { margin-left: 1.5rem; }
+.ml-4 { margin-left: 2rem; }
 
 @media only screen and (max-width: 576px) {
-    .mt-sm-2 { margin-top: 1rem;}
+    .mt-sm-2 { margin-top: 1rem; }
 }
+
 
 /* Padding */
 
@@ -36,41 +30,52 @@
 .pt-2 { padding-top: 1rem; }
 .pt-3 { padding-top: 1.5rem; }
 .pt-4 { padding-top: 2rem; }
+.pt-5 { padding-top: 3rem; }
 
 .pb-1 { padding-bottom: 0.5rem; }
 .pb-2 { padding-bottom: 1rem; }
 .pb-3 { padding-bottom: 1.5rem; }
 .pb-4 { padding-bottom: 2rem; }
-
-.pl-1 { padding-left: 0.5rem; }
-.pl-2 { padding-left: 1rem; }
-.pl-3 { padding-left: 1.5rem; }
-.pl-4 { padding-left: 2rem; }
+.pb-5 { padding-bottom: 3rem; }
 
 .pr-1 { padding-right: 0.5rem; }
 .pr-2 { padding-right: 1rem; }
 .pr-3 { padding-right: 1.5rem; }
 .pr-4 { padding-right: 2rem; }
 
+
+.pl-1 { padding-left: 0.5rem; }
+.pl-2 { padding-left: 1rem; }
+.pl-3 { padding-left: 1.5rem; }
+.pl-4 { padding-left: 2rem; }
+
 /* Width */
 
 .w-100 { width: 100%; }
 
-.max-w-550 { max-width: 550px; }
-
-.max-w-680 { max-width: 680px; }
-/* Display */
-
-.d-block { display: block; }
-
-.d-flex { display: flex; }
-
-.justify-content-center { justify-content: center; }
-
-.justify-space-between { justify-content: space-between; }
-
-.items-center { align-items: center; }
 
 /* Text */
 
 .text-center { text-align: center; }
+
+/* Display */
+
+.d-flex { display: flex; }
+
+.d-block { display: block; }
+
+.items-center { align-items: center; }
+
+.justify-content-center { justify-content: center; }
+
+.justify-content-between { justify-content: space-between; }
+
+/* Width & Height */
+
+.w-100 { width: 100%; }
+
+.h-100 { height: 100% }
+
+.max-550 { max-width: 550px; }
+
+.max-w-680 { max-width: 680px; }
